--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         </a>
         <ul class="navbar">
             <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Work</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#work">Work</a></li>
+            <li><a href="#Contact">Contact</a></li>
 
         </ul>
 
@@ -46,13 +46,13 @@
 
             <div class="social">
                 <a href="#"> Follow Me on</a>
-                <a href="#"><i class="ri-github-fill"></i></a>
-                <a href="#"><i class="ri-twitter-fill"></i></a>
-                <a href="#"><i class="ri-discord-fill"></i></a>
+                <a href="https://github.com/Skinny001" target="_blank"><i class="ri-github-fill"></i></a>
+                <a href="https://twitter.com/ayballer9" target="_blank"><i class="ri-twitter-fill"></i></a>
+                <a href="https://www.linkedin.com/in/bamigboyetemitope/" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
             </div>
 
             <div class="button">
-                <a href="#"><i class="ri-mail-line"></i>Mail me</a>
+                <a href="mailto:bamigboyetemitope84@gmail.com"><i class="ri-mail-line"></i>Mail me</a>
                 <a href="#" class="btn2"><i class="ri-arrow-down-line"></i>Download cv</a>
 
             </div>
@@ -118,6 +118,7 @@
             </div>
 
         </div>
+        
 
      </section>
      <!-- Work-->
@@ -137,26 +138,40 @@
 
 
             </div>
-            <p>Passionate about creating seamless and engaging user experiences, 
-                I am a dedicated front-end developer with a keen eye for design and a 
-                strong commitment to delivering high-quality web applications. 
-                My goal is to bridge the gap between design and functionality, 
-                ensuring that users not only have a visually appealing experience 
-                but also enjoy smooth and intuitive interactions.
+            <p>As a front-end developer, 
+                I played a pivotal role in crafting engaging and user-friendly web experiences. 
+                Leveraging proficiency in HTML, CSS, and JavaScript, 
+                I contributed to the successful delivery of several projects.
+
+                <ul>
+                    <li>
+                        Collaborated with cross-functional teams to implement responsive 
+                        and visually appealing user interfaces.
+                    </li>
+                    <li>
+                        Utilized modern front-end frameworks (e.g., React) to enhance user 
+                        interactions and streamline application functionality.
+                    </li>
+                    <li>
+                        Demonstrated strong problem-solving skills, resolving issues 
+                        and optimizing performance for optimal user experience.
+                    </li>
+                </ul>
             </p>
+            
 
         </div>
 
         <div class="work-content">
             <div class="row">
-                <img src="" alt="">
+                <img src="image/desktop-preview.jpg" alt="">
                 <div class="main-row">
                     <div class="row-text">
                         <h5>HTML - CSS</h5>
                         <H4>Dev mentor</H4>
                     </div>
                     <div class="row-icon">
-                        <i class="ri-github-fill"></i>
+                        <a href="https://github.com/Skinny001/product_preview_card" target="_blank"><i class="ri-github-fill"></i></a>
 
                     </div>
 
@@ -165,14 +180,14 @@
             </div>
 
             <div class="row">
-                <img src="" alt="">
+                <img src="image/shoes.jpg" alt="">
                 <div class="main-row">
                     <div class="row-text">
-                        <h5>HTML - CSS</h5>
+                        <h5>HTML - CSS - Javascript</h5>
                         <H4>Dev mentor</H4>
                     </div>
                     <div class="row-icon">
-                        <i class="ri-github-fill"></i>
+                        <a href="https://github.com/Skinny001/shoes_landpage" target="_blank"><i class="ri-github-fill"></i></a>
 
                     </div>
 
@@ -181,14 +196,14 @@
             </div>
 
             <div class="row">
-                <img src="" alt="">
+                <img src="image/news.jpg" alt="">
                 <div class="main-row">
                     <div class="row-text">
-                        <h5>HTML - CSS</h5>
+                        <h5>HTML - CSS - Javascript</h5>
                         <H4>Dev mentor</H4>
                     </div>
                     <div class="row-icon">
-                        <i class="ri-github-fill"></i>
+                        <a href="https://github.com/Skinny001/News_page" target="_blank"><i class="ri-github-fill"></i></a>
 
                     </div>
 
@@ -199,6 +214,42 @@
         </div>
 
      </section>
+
+     <!--contact -->
+     <section class="Contact" id="Contact">
+        <div class="center">
+            <div class="h-main">
+                <div class="home-text">
+                    <h2>contact</h2>
+
+                </div>
+
+                <div class="h-btn">
+                    <a href="#" class="hh-btn">Ping me<i class=
+                        "ri-arrow-right-line"></i></a> 
+
+                </div>
+
+
+            </div>
+            <p>You can contact me here by writing a message to me.</p>
+        </div>
+
+        <div class="contact-form">
+            <form action="">
+                <input type="text" placeholder="Your name" required>
+                <input type="email" placeholder="Email address..." required>
+                <textarea name="" id="" cols="30" rows="10" placeholder="Write a message here..." required></textarea>
+                <input type="submit" name="" value="Send message" class="send-btn">
+            </form>
+
+        </div>
+     </section>
+
+     <div class="copyright">
+        <p>@ 2024 Ayodeji. ALL RIGHTS RESERVED</p>
+
+     </div>
 
     <!--custom js file link -->
     <script src="script.js"></script>
